c_src/sip_parser.c

#line 1 "sip_parser.rl"
#include "sip_parser.h"
#include <alloca.h>
#include <ctype.h>
#include <stdio.h>
#include <string.h>

// clang-format off

#line 16 "sip_parser.rl"



#line 16 "sip_parser.c"
static const int sip_parser_uri_start = 1;
static const int sip_parser_uri_first_final = 154;
static const int sip_parser_uri_error = 0;

static const int sip_parser_uri_en_main = 1;


#line 19 "sip_parser.rl"
// clang-format on

int decode_uri(size_t size, char *buf, char **err, uri_state_t *uri) {
  int cs = 0;
  int ret = R_SUCCESS;

  char *p = buf;
  char *pe = p + size;
  char *eof = pe;

  // clang-format off
  
#line 37 "sip_parser.c"
	{
	cs = sip_parser_uri_start;
	}

#line 31 "sip_parser.rl"
  
#line 44 "sip_parser.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 83: goto tr1;
		case 84: goto tr2;
		case 115: goto tr1;
		case 116: goto tr2;
	}
	goto tr0;
tr0:
#line 13 "sip_parser.rl"
	{ ret = R_PARSE_ERROR; *err = p; }
	goto st0;
#line 62 "sip_parser.c"
st0:
cs = 0;
	goto _out;
tr1:
#line 7 "sip_uri.rl"
	{ uri->scheme_start = p; }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 74 "sip_parser.c"
	switch( (*p) ) {
		case 73: goto st3;
		case 105: goto st3;
	}
	goto tr0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 80: goto tr4;
		case 112: goto tr4;
	}
	goto tr0;
tr4:
#line 13 "sip_uri.rl"
	{ uri->scheme_stop = p; }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 97 "sip_parser.c"
	switch( (*p) ) {
		case 58: goto st5;
		case 83: goto tr6;
		case 115: goto tr6;
	}
	goto tr0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 33: goto tr7;
		case 35: goto tr8;
		case 37: goto tr9;
		case 44: goto tr7;
		case 47: goto tr7;
		case 58: goto tr12;
		case 59: goto tr13;
		case 61: goto tr7;
		case 63: goto tr7;
		case 64: goto tr14;
		case 91: goto tr17;
		case 95: goto tr7;
		case 126: goto tr7;
	}
	if ( (*p) < 65 ) {
		if ( (*p) < 40 ) {
			if ( 36 <= (*p) && (*p) <= 39 )
				goto tr7;
		} else if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr11;
		} else
			goto tr10;
	} else if ( (*p) > 70 ) {
		if ( (*p) < 97 ) {
			if ( 71 <= (*p) && (*p) <= 90 )
				goto tr16;
		} else if ( (*p) > 102 ) {
			if ( 103 <= (*p) && (*p) <= 122 )
				goto tr16;
		} else
			goto tr15;
	} else
		goto tr15;
	goto tr0;
tr7:
#line 8 "sip_uri.rl"
	{ uri->user_start = p; }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 152 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto st6;
		case 37: goto st7;
		case 58: goto tr20;
		case 61: goto st6;
		case 64: goto tr21;
		case 95: goto st6;
		case 126: goto st6;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st6;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st6;
	} else
		goto st6;
	goto tr0;
tr9:
#line 8 "sip_uri.rl"
	{ uri->user_start = p; }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 179 "sip_parser.c"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st8;
	} else
		goto st8;
	goto tr0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st6;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st6;
	} else
		goto st6;
	goto tr0;
tr12:
#line 8 "sip_uri.rl"
	{ uri->user_start = p; }
#line 14 "sip_uri.rl"
	{ uri->user_stop = p - 1; }
	goto st9;
tr20:
#line 14 "sip_uri.rl"
	{ uri->user_stop = p - 1; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 216 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto tr23;
		case 37: goto tr24;
		case 61: goto tr23;
		case 64: goto tr25;
		case 95: goto tr23;
		case 126: goto tr23;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr23;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr23;
		} else if ( (*p) >= 65 )
			goto tr23;
	} else
		goto tr23;
	goto tr0;
tr23:
#line 9 "sip_uri.rl"
	{ uri->pass_start = p; }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 245 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto st10;
		case 37: goto st11;
		case 61: goto st10;
		case 64: goto tr28;
		case 95: goto st10;
		case 126: goto st10;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st10;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st10;
		} else if ( (*p) >= 65 )
			goto st10;
	} else
		goto st10;
	goto tr0;
tr24:
#line 9 "sip_uri.rl"
	{ uri->pass_start = p; }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 274 "sip_parser.c"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st12;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st12;
	} else
		goto st12;
	goto tr0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st10;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st10;
	} else
		goto st10;
	goto tr0;
tr14:
#line 8 "sip_uri.rl"
	{ uri->user_start = p; }
#line 14 "sip_uri.rl"
	{ uri->user_stop = p - 1; }
#line 19 "sip_uri.rl"
	{ uri->userinfo_complete = true; }
	goto st13;
tr21:
#line 14 "sip_uri.rl"
	{ uri->user_stop = p - 1; }
#line 19 "sip_uri.rl"
	{ uri->userinfo_complete = true; }
	goto st13;
tr25:
#line 9 "sip_uri.rl"
	{ uri->pass_start = p; }
#line 15 "sip_uri.rl"
	{ uri->pass_stop = p - 1; }
#line 19 "sip_uri.rl"
	{ uri->userinfo_complete = true; }
	goto st13;
tr28:
#line 15 "sip_uri.rl"
	{ uri->pass_stop = p - 1; }
#line 19 "sip_uri.rl"
	{ uri->userinfo_complete = true; }
	goto st13;
tr109:
#line 14 "sip_uri.rl"
	{ uri->user_stop = p - 1; }
#line 9 "sip_uri.rl"
	{ uri->pass_start = p; }
#line 15 "sip_uri.rl"
	{ uri->pass_stop = p - 1; }
#line 19 "sip_uri.rl"
	{ uri->userinfo_complete = true; }
	goto st13;
tr112:
#line 14 "sip_uri.rl"
	{ uri->user_stop = p - 1; }
#line 15 "sip_uri.rl"
	{ uri->pass_stop = p - 1; }
#line 19 "sip_uri.rl"
	{ uri->userinfo_complete = true; }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 347 "sip_parser.c"
	if ( (*p) == 91 )
		goto tr17;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr30;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr31;
	} else
		goto tr31;
	goto tr0;
tr30:
#line 10 "sip_uri.rl"
	{ uri->host_start = p; }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 367 "sip_parser.c"
	switch( (*p) ) {
		case 45: goto st15;
		case 46: goto st31;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st40;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st16;
	} else
		goto st16;
	goto tr0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 45 )
		goto st15;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st16;
	} else
		goto st16;
	goto tr0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 45: goto st15;
		case 46: goto st17;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st16;
	} else
		goto st16;
	goto tr0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st154;
	} else
		goto st154;
	goto tr0;
tr31:
#line 10 "sip_uri.rl"
	{ uri->host_start = p; }
	goto st154;
st154:
	if ( ++p == pe )
		goto _test_eof154;
case 154:
#line 434 "sip_parser.c"
	switch( (*p) ) {
		case 45: goto st18;
		case 46: goto st155;
		case 58: goto tr197;
		case 59: goto tr198;
		case 63: goto tr199;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st154;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st154;
	} else
		goto st154;
	goto tr0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) == 45 )
		goto st18;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st154;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st154;
	} else
		goto st154;
	goto tr0;
st155:
	if ( ++p == pe )
		goto _test_eof155;
case 155:
	switch( (*p) ) {
		case 58: goto tr197;
		case 59: goto tr198;
		case 63: goto tr199;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st154;
	} else
		goto st154;
	goto tr0;
tr197:
#line 16 "sip_uri.rl"
	{ uri->host_stop = p - 1; }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 492 "sip_parser.c"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr39;
	goto tr0;
tr39:
#line 11 "sip_uri.rl"
	{ uri->port_start = p; }
	goto st156;
st156:
	if ( ++p == pe )
		goto _test_eof156;
case 156:
#line 504 "sip_parser.c"
	switch( (*p) ) {
		case 59: goto tr201;
		case 63: goto tr202;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st156;
	goto tr0;
tr198:
#line 16 "sip_uri.rl"
	{ uri->host_stop = p - 1; }
	goto st157;
tr201:
#line 17 "sip_uri.rl"
	{ uri->port_stop = p - 1; }
	goto st157;
tr208:
#line 32 "sip_uri.rl"
	{ *(uri->pname + uri->pi*2 + 1) = p - 1; }
	goto st157;
tr212:
#line 33 "sip_uri.rl"
	{ *(uri->pvalue + uri->pi*2 + 1) = p - 1; }
	goto st157;
st157:
	if ( ++p == pe )
		goto _test_eof157;
case 157:
#line 532 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto tr203;
		case 37: goto tr204;
		case 59: goto st157;
		case 63: goto st25;
		case 93: goto tr203;
		case 95: goto tr203;
		case 126: goto tr203;
	}
	if ( (*p) < 45 ) {
		if ( 36 <= (*p) && (*p) <= 43 )
			goto tr203;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr203;
		} else if ( (*p) >= 65 )
			goto tr203;
	} else
		goto tr203;
	goto tr0;
tr203:
#line 21 "sip_uri.rl"
	{
    if (uri->plen == 0) {
      size_t s = size * 2 * sizeof(char *);
      memset(uri->pname, 0, s);
      memset(uri->pvalue, 0, s);
    }
    uri->pi = uri->plen;
    uri->plen++;
    *(uri->pname + uri->pi*2 + 0) = p;
  }
	goto st158;
st158:
	if ( ++p == pe )
		goto _test_eof158;
case 158:
#line 571 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto st158;
		case 37: goto st20;
		case 59: goto tr208;
		case 61: goto tr209;
		case 63: goto tr210;
		case 93: goto st158;
		case 95: goto st158;
		case 126: goto st158;
	}
	if ( (*p) < 45 ) {
		if ( 36 <= (*p) && (*p) <= 43 )
			goto st158;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st158;
		} else if ( (*p) >= 65 )
			goto st158;
	} else
		goto st158;
	goto tr0;
tr204:
#line 21 "sip_uri.rl"
	{
    if (uri->plen == 0) {
      size_t s = size * 2 * sizeof(char *);
      memset(uri->pname, 0, s);
      memset(uri->pvalue, 0, s);
    }
    uri->pi = uri->plen;
    uri->plen++;
    *(uri->pname + uri->pi*2 + 0) = p;
  }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 611 "sip_parser.c"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st21;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st21;
	} else
		goto st21;
	goto tr0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st158;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st158;
	} else
		goto st158;
	goto tr0;
tr209:
#line 32 "sip_uri.rl"
	{ *(uri->pname + uri->pi*2 + 1) = p - 1; }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 642 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto tr42;
		case 37: goto tr43;
		case 93: goto tr42;
		case 95: goto tr42;
		case 126: goto tr42;
	}
	if ( (*p) < 45 ) {
		if ( 36 <= (*p) && (*p) <= 43 )
			goto tr42;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr42;
		} else if ( (*p) >= 65 )
			goto tr42;
	} else
		goto tr42;
	goto tr0;
tr42:
#line 31 "sip_uri.rl"
	{ *(uri->pvalue + uri->pi*2 + 0) = p; }
	goto st159;
st159:
	if ( ++p == pe )
		goto _test_eof159;
case 159:
#line 670 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto st159;
		case 37: goto st23;
		case 59: goto tr212;
		case 63: goto tr213;
		case 93: goto st159;
		case 95: goto st159;
		case 126: goto st159;
	}
	if ( (*p) < 45 ) {
		if ( 36 <= (*p) && (*p) <= 43 )
			goto st159;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st159;
		} else if ( (*p) >= 65 )
			goto st159;
	} else
		goto st159;
	goto tr0;
tr43:
#line 31 "sip_uri.rl"
	{ *(uri->pvalue + uri->pi*2 + 0) = p; }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 700 "sip_parser.c"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st24;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st24;
	} else
		goto st24;
	goto tr0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st159;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st159;
	} else
		goto st159;
	goto tr0;
tr199:
#line 16 "sip_uri.rl"
	{ uri->host_stop = p - 1; }
	goto st25;
tr202:
#line 17 "sip_uri.rl"
	{ uri->port_stop = p - 1; }
	goto st25;
tr210:
#line 32 "sip_uri.rl"
	{ *(uri->pname + uri->pi*2 + 1) = p - 1; }
	goto st25;
tr213:
#line 33 "sip_uri.rl"
	{ *(uri->pvalue + uri->pi*2 + 1) = p - 1; }
	goto st25;
tr216:
#line 45 "sip_uri.rl"
	{ *(uri->hvalue + uri->hi*2 + 0) = p; }
#line 47 "sip_uri.rl"
	{ *(uri->hvalue + uri->hi*2 + 1) = p - 1; }
	goto st25;
tr218:
#line 47 "sip_uri.rl"
	{ *(uri->hvalue + uri->hi*2 + 1) = p - 1; }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 753 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto tr46;
		case 36: goto tr46;
		case 37: goto tr47;
		case 63: goto tr46;
		case 93: goto tr46;
		case 95: goto tr46;
		case 126: goto tr46;
	}
	if ( (*p) < 45 ) {
		if ( 39 <= (*p) && (*p) <= 43 )
			goto tr46;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr46;
		} else if ( (*p) >= 65 )
			goto tr46;
	} else
		goto tr46;
	goto tr0;
tr46:
#line 35 "sip_uri.rl"
	{
    if (uri->hlen == 0) {
      size_t s = size * 2 * sizeof(char *);
      memset(uri->hname, 0, s);
      memset(uri->hvalue, 0, s);
    }
    uri->hi = uri->hlen;
    uri->hlen++;
    *(uri->hname + uri->hi*2 + 0) = p;
  }
	goto st26;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
#line 792 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto st26;
		case 36: goto st26;
		case 37: goto st27;
		case 61: goto tr50;
		case 63: goto st26;
		case 93: goto st26;
		case 95: goto st26;
		case 126: goto st26;
	}
	if ( (*p) < 45 ) {
		if ( 39 <= (*p) && (*p) <= 43 )
			goto st26;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st26;
		} else if ( (*p) >= 65 )
			goto st26;
	} else
		goto st26;
	goto tr0;
tr47:
#line 35 "sip_uri.rl"
	{
    if (uri->hlen == 0) {
      size_t s = size * 2 * sizeof(char *);
      memset(uri->hname, 0, s);
      memset(uri->hvalue, 0, s);
    }
    uri->hi = uri->hlen;
    uri->hlen++;
    *(uri->hname + uri->hi*2 + 0) = p;
  }
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 832 "sip_parser.c"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st28;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st28;
	} else
		goto st28;
	goto tr0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st26;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st26;
	} else
		goto st26;
	goto tr0;
tr50:
#line 46 "sip_uri.rl"
	{ *(uri->hname + uri->hi*2 + 1) = p - 1; }
	goto st160;
st160:
	if ( ++p == pe )
		goto _test_eof160;
case 160:
#line 863 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto tr214;
		case 37: goto tr215;
		case 38: goto tr216;
		case 63: goto tr214;
		case 93: goto tr214;
		case 95: goto tr214;
		case 126: goto tr214;
	}
	if ( (*p) < 45 ) {
		if ( 36 <= (*p) && (*p) <= 43 )
			goto tr214;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr214;
		} else if ( (*p) >= 65 )
			goto tr214;
	} else
		goto tr214;
	goto tr0;
tr214:
#line 45 "sip_uri.rl"
	{ *(uri->hvalue + uri->hi*2 + 0) = p; }
	goto st161;
st161:
	if ( ++p == pe )
		goto _test_eof161;
case 161:
#line 893 "sip_parser.c"
	switch( (*p) ) {
		case 33: goto st161;
		case 37: goto st29;
		case 38: goto tr218;
		case 63: goto st161;
		case 93: goto st161;
		case 95: goto st161;
		case 126: goto st161;
	}
	if ( (*p) < 45 ) {
		if ( 36 <= (*p) && (*p) <= 43 )
			goto st161;
	} else if ( (*p) > 58 ) {
		if ( (*p) > 91 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st161;
		} else if ( (*p) >= 65 )
			goto st161;
	} else
		goto st161;
	goto tr0;
tr215:
#line 45 "sip_uri.rl"
	{ *(uri->hvalue + uri->hi*2 + 0) = p; }
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 923 "sip_parser.c"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st30;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st30;
	} else
		goto st30;
	goto tr0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st161;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st161;
	} else
		goto st161;
	goto tr0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st32;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st154;
	} else
		goto st154;
	goto tr0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	switch( (*p) ) {
		case 45: goto st15;
		case 46: goto st33;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st38;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st16;
	} else
		goto st16;
	goto tr0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st34;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st154;
	} else
		goto st154;
	goto tr0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	switch( (*p) ) {
		case 45: goto st15;
